@@ -32,7 +32,6 @@
 				<configuration>
 					<executable>java</executable>
 					<arguments>
-						<!--argument>--><!--enable-preview</argument-->
 						<argument>-p</argument>
 						<modulepath/>
 						<argument>-m</argument>
